Initial Project Setup

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,3 +1,4 @@
+<%# THIS IS A TEMPLATE THAT WILL CONTAIN THE CONTENT FOR THE FINAL OUTPUT OF THIS APPLICATION %>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,7 +10,8 @@
   <body>
     Before
     <br />
-    <!-- This is where we will put the content of everything inside of my application -->
+    <%# This is where we will put the content of everything inside of my application %>
+    <%# Every ejs file will be imported into this body section %>
     <%- body %>
     <br />
     After
