Initial project setup

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,17 +1,18 @@
-<%# THIS IS A TEMPLATE THAT WILL CONTAIN THE CONTENT FOR THE FINAL OUTPUT OF THIS APPLICATION %>
+<%# THIS IS A TEMPLATE THAT WILL CONTAIN THE CONTENT FOR THE FINAL OUTPUT OF
+THIS APPLICATION %>
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Library</title>
+    <title>Mybrary</title>
   </head>
   <body>
     Before
     <br />
-    <%# This is where we will put the content of everything inside of my application %>
-    <%# Every ejs file will be imported into this body section %>
+    <%# This is where we will put the content of everything inside of my
+    application %> <%# Every ejs file will be imported into this body section %>
     <%- body %>
     <br />
     After
