Initial author routes

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,6 +13,7 @@ THIS APPLICATION %>
     <%# This is where we will put the content of everything inside of my
     application %> <%# Every ejs file will be imported into this body section %>
     <%- include('../partials/header.ejs') %> <br />
+    <%- include('../partials/errorMessage.ejs') %> <br />
     <%- body %>
     <br />
   </body>
