File upload changes

--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -34,7 +34,7 @@
 <!-- Cover --> 
 <div>
 <label>Cover</label> <br />
-    <input type="file" name="cover" />
+    <input type="file" name="cover" class="filepond" />
 </div>
 
 <!-- Description --> 
