Form setup styles

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,7 @@
 @import 'shared/variables.css';
 @import 'shared/headers.css';
 @import 'shared/buttons.css';
+@import 'shared/form.css';
 
 /* CSS VARIABLES/CUSTOM PROPERTIES */
 :root {
