--- a/public/stylesheets/shared/buttons.css
+++ b/public/stylesheets/shared/buttons.css
@@ -11,13 +11,14 @@
 .btn {
   border: 1px solid var(--color-btn-border);
   border-radius: 0.5rem;
-  padding: 0.25rem 0.75rem;
-  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.75rem;
   font-family: 'Gotham Rounded';
   font-weight: 400;
   cursor: pointer;
   text-decoration: none;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .btn-primary {
