--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,47 +1,52 @@
 <!-- Title Field -->
-<div>
-    <label for="">Title</label> 
-    <input type="text" name="title" value="<%= book.title %>" />
+<div class="form-row">
+    <div class="form-item">
+        <label for="">Title</label> 
+        <input type="text" name="title" value="<%= book.title %>" />
+    </div>
+    <div class="form-item">
+        <!-- Author select box -->
+        <label>Author</label> 
+        <select name="author">
+        <% authors.forEach(author => { %>
+            <% if(author.id === book.author) { %>
+                <option selected label="<%= author.name %>" value="<%= author.id %>">
+            <% } else { %>
+                <option label="<%= author.name %>" value="<%= author.id %>">
+            <% } %>
+        <% }) %>
+        </select>
+    </div>
 </div>
 
-<!-- Author select box -->
-<div>
-    <label>Author</label> 
-    <select name="author">
-    <% authors.forEach(author => { %>
-        <% if(author.id === book.author) { %>
-            <option selected label="<%= author.name %>" value="<%= author.id %>">
-        <% } else { %>
-            <option label="<%= author.name %>" value="<%= author.id %>">
-        <% } %>
-    <% }) %>
-    </select>
-</div>
-
-<!-- Publish Date --> 
-<div>
-<label>Publish Date</label> <br />
-    <input type="date" name="publishDate" 
-        value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>" />
-</div>
-
-<!-- Page Count --> 
-<div>
-<label>Page Count</label> <br />
-    <input type="number" name="pageCount" min="1" value="<%= book.pageCount  %>" />
+<div class="form-row">
+    <!-- Publish Date --> 
+    <div class="form-item">
+        <label>Publish Date</label> 
+        <input type="date" name="publishDate" 
+            value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>" />
+    </div>
+    <!-- Page Count --> 
+    <div class="form-item">
+        <label>Page Count</label>
+        <input type="number" name="pageCount" min="1" value="<%= book.pageCount  %>" />
+    </div>
 </div>
 
 <!-- Cover --> 
-<div>
-<label>Cover</label> <br />
+<div class="form-row">
+  <div class="form-item form-item-no-grow">
+    <label>Cover</label> 
     <input type="file" name="cover" class="filepond" />
+  </div>
+  <!-- Description --> 
+    <div class="form-item">
+      <label>Description</label>
+      <textarea name="description"><% book.description %></textarea>
+    </div>
 </div>
 
-<!-- Description --> 
-<div>
-<label>Description</label> <br />
-    <textarea name="description"><% book.description %></textarea>
-</div>
+
 
 
 
