--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -34,7 +34,7 @@ THIS APPLICATION %>
     <script defer src="/javascripts/fileUpload.js"></script>
 
     <!-- CUSTOM STYLESHEETS -->
-    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css" />
 
     <title>Mybrary</title>
   </head>
