--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,8 @@
 @import 'shared/headers.css';
 @import 'shared/buttons.css';
 @import 'shared/form.css';
+@import 'shared/author.css';
+@import 'shared/book.css';
 
 /* CSS VARIABLES/CUSTOM PROPERTIES */
 :root {
@@ -25,6 +27,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
@@ -40,4 +43,8 @@ body {
 .page-header {
   font-size: 2rem;
   font-weight: 500;
+}
+
+.error-message {
+  color: var(--color-btn-danger-background);
 }
