--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -5,9 +5,6 @@
 </div>
 <% if (booksByAuthor.length > 0) { %>
 <h2 class="page-header">Books By Author</h2>
-<% booksByAuthor.forEach(book => { %>
-<a href="/books/<%= book.id %>">
-  <img height="150" width="100" src="<%= book.coverImagePath %>" alt="" />
-</a>
-<% }) %> <br />
+<%- include('../partials/bookGrid', { books: booksByAuthor }) %>
+<br />
 <% } %>
