--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,3 @@
 <% if (locals.errorMessage != null) { %> <br />
-<%= errorMessage %> <br />
+<div class="error-message"><%= errorMessage %></div>
 <% } %>
